[project]
name = "a2c"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "gymnasium[atari]>=1.3.0",
    "matplotlib>=3.10.9",
    "moviepy>=2.2.1",
    "opencv-python>=4.13.0.92",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]
